--- a/slides/mass_notes.html
+++ b/slides/mass_notes.html
@@ -47,8 +47,8 @@
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-orgc61a2ec">
-<h2 id="orgc61a2ec">Navigation instructions</h2>
+<section id="slide-orgf78dc83">
+<h2 id="orgf78dc83">Navigation instructions</h2>
 <ul>
 <li>Press <i class="fa fa-bars"></i> at the bottom
 left corner of the page to open a menu.
@@ -74,16 +74,16 @@ the bottom right corner of the page to navigate the presentation.</li>
 </section>
 </section>
 <section>
-<section id="slide-orgcbdcdf1" data-audio-src="mass/title.ogg">
-<h2 id="orgcbdcdf1">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-orgcc94309" data-audio-src="mass/title.ogg">
+<h2 id="orgcc94309">CP213: Applied mathematics and problem solving</h2>
 <h2>Mass and species balances</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-org1644ddd">
-<h2 id="org1644ddd">Overview</h2>
+<section id="slide-orgc451b6c">
+<h2 id="orgc451b6c">Overview</h2>
 <ul>
 <li>Mass balances
 <ul>
@@ -117,8 +117,8 @@ differentiation and integration.
 </section>
 </section>
 <section>
-<section id="slide-org8b542b5">
-<h2 id="org8b542b5">Balance equation for mass</h2>
+<section id="slide-orgbf60c5a">
+<h2 id="orgbf60c5a">Balance equation for mass</h2>
 <div>
 \begin{align*}
 {\rm accumulation} 
@@ -144,8 +144,8 @@ differentiation and integration.
 </section>
 </section>
 <section>
-<section id="slide-orgb6ea115">
-<h2 id="orgb6ea115">Tank filling</h2>
+<section id="slide-orgdc78393">
+<h2 id="orgdc78393">Tank filling</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31780&amp;code=cU~6oOEiuxAWo6tgmFvMmWtevk8Ivfq" frameborder="0" allowfullscreen></iframe>
 
 <aside class="notes">
@@ -184,8 +184,8 @@ V &= A h
 </section>
 </section>
 <section>
-<section id="slide-orgf3812fa">
-<h2 id="orgf3812fa">Determining the water level</h2>
+<section id="slide-org8e802d8">
+<h2 id="org8e802d8">Determining the water level</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31782&amp;code=dc~RhO0cfdOFdQ2NegoRWjEGoyHrQ70" frameborder="0" allowfullscreen></iframe>
 
 
@@ -253,22 +253,22 @@ The rate of
 </section>
 </section>
 <section>
-<section id="slide-orgb5ad45e">
-<h2 id="orgb5ad45e">Variable cross-sectional area</h2>
+<section id="slide-orga8b61dd">
+<h2 id="orga8b61dd">Variable cross-sectional area</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31784&amp;code=d5~ikL9hWEKwBJOG0Gm7MFXxY9UBMqa" frameborder="0" allowfullscreen></iframe>
 
 </section>
 </section>
 <section>
-<section id="slide-orgfcf77d6">
-<h2 id="orgfcf77d6">Solving the differential equation</h2>
+<section id="slide-org555dee7">
+<h2 id="org555dee7">Solving the differential equation</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31790&amp;code=cV~ycd4TFIYtdR4EieQSVoVRG8urLH6" frameborder="0" allowfullscreen></iframe>
 
 </section>
 </section>
 <section>
-<section id="slide-org6c0f185">
-<h2 id="org6c0f185">Gravity drainage</h2>
+<section id="slide-org84de6e0">
+<h2 id="org84de6e0">Gravity drainage</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31869&amp;code=dc~RhO0cidLFaQ5NigoRPjIGmyGrR72" frameborder="0" allowfullscreen></iframe>
 
 
@@ -286,15 +286,18 @@ As you will find out in fluid flow and in
 </section>
 </section>
 <section>
-<section id="slide-org326ff26">
-<h2 id="org326ff26">Numerical solution of gravity drainage problem</h2>
+<section id="slide-orgd5a9cbf">
+<h2 id="orgd5a9cbf">Numerical solution of gravity drainage problem</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31901&amp;code=cD~cIPioCRimve8AQdiGXIcDIWQ7Rny" frameborder="0" allowfullscreen></iframe>
 
 </section>
 </section>
 <section>
-<section id="slide-org035b16e">
-<h2 id="org035b16e">Velocity and volumetric flowrate</h2>
+<section id="slide-orgc8c6adb">
+<h2 id="orgc8c6adb">Velocity and volumetric flowrate</h2>
+<iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31920&amp;code=dc~RhO2c9dRF8PYNhgqRVjFGoyDrR79" frameborder="0" allowfullscreen></iframe>
+
+
 <aside class="notes">
 <p>
 
@@ -336,8 +339,8 @@ dV = A dh
 </section>
 </section>
 <section>
-<section id="slide-org2c8d382">
-<h2 id="org2c8d382">Balance equation: Species \(A\)</h2>
+<section id="slide-orge23f8b1">
+<h2 id="orge23f8b1">Balance equation: Species \(A\)</h2>
 <div>
 \begin{align*}
 {\rm accumulation} 
@@ -366,19 +369,22 @@ dV = A dh
 </section>
 </section>
 <section>
-<section id="slide-org83784f1">
-<h2 id="org83784f1">Species balance: Batch distillation</h2>
+<section id="slide-org431144a">
+<h2 id="org431144a">Species balance: Batch distillation</h2>
 
 </section>
 </section>
 <section>
-<section id="slide-org37ae19d">
-<h2 id="org37ae19d">Summary</h2>
+<section id="slide-org06aaf2d">
+<h2 id="org06aaf2d">Summary</h2>
 <ul>
 <li>Balance equation</li>
+<li>Tank filling</li>
+<li>Gravitational drainage</li>
+<li>Velocity profiles</li>
+<li>Species balances</li>
 
 </ul>
-
 
 <aside class="notes">
 nil
