--- a/slides/energy_notes.html
+++ b/slides/energy_notes.html
@@ -48,8 +48,8 @@
 
 
 <section>
-<section id="slide-org564f83f">
-<h2 id="org564f83f">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-org282e1c3">
+<h2 id="org282e1c3">CP213: Applied mathematics and problem solving</h2>
 <h2>Energy balances</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -64,8 +64,8 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-org0869db7">
-<h2 id="org0869db7">Overview</h2>
+<section id="slide-org02e8c1e">
+<h2 id="org02e8c1e">Overview</h2>
 <ul>
 <li>Heating a material</li>
 <li>Cooling of a material</li>
@@ -78,8 +78,8 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-orgdcbc91b">
-<h2 id="orgdcbc91b">Balance equation: Energy</h2>
+<section id="slide-org5a67f97">
+<h2 id="org5a67f97">Balance equation: Energy</h2>
 <div>
 \begin{align*}
 {\rm accumulation} 
@@ -111,48 +111,48 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-org119d2fe">
-<h2 id="org119d2fe">Heating a material</h2>
+<section id="slide-org6f8768e">
+<h2 id="org6f8768e">Heating a material</h2>
 
 </section>
 </section>
 <section>
-<section id="slide-org1fe98ed">
-<h2 id="org1fe98ed">Cooling of a material</h2>
+<section id="slide-org8c78849">
+<h2 id="org8c78849">Cooling of a material</h2>
 
 
 
 </section>
 </section>
 <section>
-<section id="slide-orgfafa381">
-<h2 id="orgfafa381">Fire piston</h2>
-<div class="outline-text-2" id="text-orgfafa381">
+<section id="slide-orgf4f3808">
+<h2 id="orgf4f3808">Fire piston</h2>
+<div class="outline-text-2" id="text-orgf4f3808">
 </div>
 </section>
-<section id="slide-org6ea1336">
-<h3 id="org6ea1336">Fire piston: Background</h3>
+<section id="slide-org1c457a7">
+<h3 id="org1c457a7">Fire piston: Background</h3>
 <div>
 <iframe width="1120" height="630" src="https://www.youtube.com/embed/ttz-CzEDXwI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 </section>
-<section id="slide-org38fccb1">
-<h3 id="org38fccb1">Fire piston: Energy balance</h3>
+<section id="slide-org1306b62">
+<h3 id="org1306b62">Fire piston: Energy balance</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-org3ec6984">
-<h2 id="org3ec6984">Refrigeration</h2>
+<section id="slide-orgd83bd57">
+<h2 id="orgd83bd57">Refrigeration</h2>
 
 
 
 </section>
 </section>
 <section>
-<section id="slide-org521cada">
-<h2 id="org521cada">Summary</h2>
+<section id="slide-org6ad969d">
+<h2 id="org6ad969d">Summary</h2>
 <ul>
 <li>Balance equation</li>
 <li>Heating a material</li>
