--- a/slides/mass_notes.html
+++ b/slides/mass_notes.html
@@ -47,8 +47,8 @@
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-orgf78dc83">
-<h2 id="orgf78dc83">Navigation instructions</h2>
+<section id="slide-org55338ea">
+<h2 id="org55338ea">Navigation instructions</h2>
 <ul>
 <li>Press <i class="fa fa-bars"></i> at the bottom
 left corner of the page to open a menu.
@@ -74,16 +74,16 @@ the bottom right corner of the page to navigate the presentation.</li>
 </section>
 </section>
 <section>
-<section id="slide-orgcc94309" data-audio-src="mass/title.ogg">
-<h2 id="orgcc94309">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-orga1b936d" data-audio-src="mass/title.ogg">
+<h2 id="orga1b936d">CP213: Applied mathematics and problem solving</h2>
 <h2>Mass and species balances</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-orgc451b6c">
-<h2 id="orgc451b6c">Overview</h2>
+<section id="slide-org9f0b695">
+<h2 id="org9f0b695">Overview</h2>
 <ul>
 <li>Mass balances
 <ul>
@@ -117,8 +117,8 @@ differentiation and integration.
 </section>
 </section>
 <section>
-<section id="slide-orgbf60c5a">
-<h2 id="orgbf60c5a">Balance equation for mass</h2>
+<section id="slide-org933e393">
+<h2 id="org933e393">Balance equation for mass</h2>
 <div>
 \begin{align*}
 {\rm accumulation} 
@@ -144,8 +144,8 @@ differentiation and integration.
 </section>
 </section>
 <section>
-<section id="slide-orgdc78393">
-<h2 id="orgdc78393">Tank filling</h2>
+<section id="slide-org5c591f0">
+<h2 id="org5c591f0">Tank filling</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31780&amp;code=cU~6oOEiuxAWo6tgmFvMmWtevk8Ivfq" frameborder="0" allowfullscreen></iframe>
 
 <aside class="notes">
@@ -184,8 +184,8 @@ V &= A h
 </section>
 </section>
 <section>
-<section id="slide-org8e802d8">
-<h2 id="org8e802d8">Determining the water level</h2>
+<section id="slide-orgcfc592b">
+<h2 id="orgcfc592b">Determining the water level</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31782&amp;code=dc~RhO0cfdOFdQ2NegoRWjEGoyHrQ70" frameborder="0" allowfullscreen></iframe>
 
 
@@ -253,22 +253,22 @@ The rate of
 </section>
 </section>
 <section>
-<section id="slide-orga8b61dd">
-<h2 id="orga8b61dd">Variable cross-sectional area</h2>
+<section id="slide-org5f6960b">
+<h2 id="org5f6960b">Variable cross-sectional area</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31784&amp;code=d5~ikL9hWEKwBJOG0Gm7MFXxY9UBMqa" frameborder="0" allowfullscreen></iframe>
 
 </section>
 </section>
 <section>
-<section id="slide-org555dee7">
-<h2 id="org555dee7">Solving the differential equation</h2>
+<section id="slide-org46db12f">
+<h2 id="org46db12f">Solving the differential equation</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31790&amp;code=cV~ycd4TFIYtdR4EieQSVoVRG8urLH6" frameborder="0" allowfullscreen></iframe>
 
 </section>
 </section>
 <section>
-<section id="slide-org84de6e0">
-<h2 id="org84de6e0">Gravity drainage</h2>
+<section id="slide-orgd687c41">
+<h2 id="orgd687c41">Gravity drainage</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31869&amp;code=dc~RhO0cidLFaQ5NigoRPjIGmyGrR72" frameborder="0" allowfullscreen></iframe>
 
 
@@ -286,15 +286,15 @@ As you will find out in fluid flow and in
 </section>
 </section>
 <section>
-<section id="slide-orgd5a9cbf">
-<h2 id="orgd5a9cbf">Numerical solution of gravity drainage problem</h2>
+<section id="slide-org8558246">
+<h2 id="org8558246">Numerical solution of gravity drainage problem</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31901&amp;code=cD~cIPioCRimve8AQdiGXIcDIWQ7Rny" frameborder="0" allowfullscreen></iframe>
 
 </section>
 </section>
 <section>
-<section id="slide-orgc8c6adb">
-<h2 id="orgc8c6adb">Velocity and volumetric flowrate</h2>
+<section id="slide-orgbcfd0e5">
+<h2 id="orgbcfd0e5">Velocity and volumetric flowrate</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31920&amp;code=dc~RhO2c9dRF8PYNhgqRVjFGoyDrR79" frameborder="0" allowfullscreen></iframe>
 
 
@@ -339,8 +339,8 @@ dV = A dh
 </section>
 </section>
 <section>
-<section id="slide-orge23f8b1">
-<h2 id="orge23f8b1">Balance equation: Species \(A\)</h2>
+<section id="slide-org2d2b052">
+<h2 id="org2d2b052">Balance equation: Species \(A\)</h2>
 <div>
 \begin{align*}
 {\rm accumulation} 
@@ -360,7 +360,7 @@ dV = A dh
 </ul></li>
 <li>generation:
 <ul>
-<li>chemical reaction: \(\nu_A \Delta alpha\)</li>
+<li>chemical reaction: \(\nu_A \Delta \alpha\)</li>
 
 </ul></li>
 
@@ -369,14 +369,16 @@ dV = A dh
 </section>
 </section>
 <section>
-<section id="slide-org431144a">
-<h2 id="org431144a">Species balance: Batch distillation</h2>
+<section id="slide-orgacaac6a">
+<h2 id="orgacaac6a">Species balance: Batch distillation</h2>
+<iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31994&amp;code=cM~O3wcE9N5pP6WCvEHMT83k47ahP6L" frameborder="0" allowfullscreen></iframe>
+
 
 </section>
 </section>
 <section>
-<section id="slide-org06aaf2d">
-<h2 id="org06aaf2d">Summary</h2>
+<section id="slide-org7db2214">
+<h2 id="org7db2214">Summary</h2>
 <ul>
 <li>Balance equation</li>
 <li>Tank filling</li>
