--- a/slides/energy_notes.html
+++ b/slides/energy_notes.html
@@ -48,14 +48,10 @@
 
 
 <section>
-<section id="slide-org282e1c3">
-<h2 id="org282e1c3">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-orgd8b344c">
+<h2 id="orgd8b344c">CP213: Applied mathematics and problem solving</h2>
 <h2>Energy balances</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
-
-<p class="fragment" data-audio-src="energy/title.ogg"></p>
-
-<button onclick="showCaptions()" font-size="16px"><i class="fa fa-closed-captioning fa-2x"></i></button>
 
 <aside class="notes">
 nil
@@ -64,8 +60,8 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-org02e8c1e">
-<h2 id="org02e8c1e">Overview</h2>
+<section id="slide-orgf36b1ec">
+<h2 id="orgf36b1ec">Overview</h2>
 <ul>
 <li>Heating a material</li>
 <li>Cooling of a material</li>
@@ -78,8 +74,8 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-org5a67f97">
-<h2 id="org5a67f97">Balance equation: Energy</h2>
+<section id="slide-org80863d9">
+<h2 id="org80863d9">Balance equation: Energy</h2>
 <div>
 \begin{align*}
 {\rm accumulation} 
@@ -111,48 +107,62 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-org6f8768e">
-<h2 id="org6f8768e">Heating a material</h2>
+<section id="slide-orgc7a5702">
+<h2 id="orgc7a5702">Heating a material</h2>
+<iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=32435&amp;code=cV~ycd6TFJ0tbR2EfeRSTp3RB8xrPH0" frameborder="0" allowfullscreen></iframe>
 
 </section>
 </section>
 <section>
-<section id="slide-org8c78849">
-<h2 id="org8c78849">Cooling of a material</h2>
+<section id="slide-org5023849">
+<h2 id="org5023849">Heating a material</h2>
+<iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=32439&amp;code=cT~vNz5yvmayodcJReLFQCUsrvM7REP" frameborder="0" allowfullscreen></iframe>
+
+</section>
+</section>
+<section>
+<section id="slide-orgd9508a9">
+<h2 id="orgd9508a9">Cooling of a material</h2>
 
 
 
 </section>
 </section>
 <section>
-<section id="slide-orgf4f3808">
-<h2 id="orgf4f3808">Fire piston</h2>
-<div class="outline-text-2" id="text-orgf4f3808">
+<section id="slide-org6657440">
+<h2 id="org6657440">Cooling of a material</h2>
+
+</section>
+</section>
+<section>
+<section id="slide-orgfeec3b6">
+<h2 id="orgfeec3b6">Fire piston</h2>
+<div class="outline-text-2" id="text-orgfeec3b6">
 </div>
 </section>
-<section id="slide-org1c457a7">
-<h3 id="org1c457a7">Fire piston: Background</h3>
+<section id="slide-orga88e6c1">
+<h3 id="orga88e6c1">Fire piston: Background</h3>
 <div>
 <iframe width="1120" height="630" src="https://www.youtube.com/embed/ttz-CzEDXwI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 </section>
-<section id="slide-org1306b62">
-<h3 id="org1306b62">Fire piston: Energy balance</h3>
+<section id="slide-org618120f">
+<h3 id="org618120f">Fire piston: Energy balance</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-orgd83bd57">
-<h2 id="orgd83bd57">Refrigeration</h2>
+<section id="slide-orgd20a136">
+<h2 id="orgd20a136">Refrigeration</h2>
 
 
 
 </section>
 </section>
 <section>
-<section id="slide-org6ad969d">
-<h2 id="org6ad969d">Summary</h2>
+<section id="slide-org9d1484c">
+<h2 id="org9d1484c">Summary</h2>
 <ul>
 <li>Balance equation</li>
 <li>Heating a material</li>
