--- a/slides/energy_notes.html
+++ b/slides/energy_notes.html
@@ -48,8 +48,8 @@
 
 
 <section>
-<section id="slide-orgd8b344c">
-<h2 id="orgd8b344c">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-org9f4dcc9">
+<h2 id="org9f4dcc9">CP213: Applied mathematics and problem solving</h2>
 <h2>Energy balances</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -60,8 +60,8 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-orgf36b1ec">
-<h2 id="orgf36b1ec">Overview</h2>
+<section id="slide-org921d5d5">
+<h2 id="org921d5d5">Overview</h2>
 <ul>
 <li>Heating a material</li>
 <li>Cooling of a material</li>
@@ -74,8 +74,8 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-org80863d9">
-<h2 id="org80863d9">Balance equation: Energy</h2>
+<section id="slide-orgf86b577">
+<h2 id="orgf86b577">Balance equation: Energy</h2>
 <div>
 \begin{align*}
 {\rm accumulation} 
@@ -107,62 +107,55 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-orgc7a5702">
-<h2 id="orgc7a5702">Heating a material</h2>
+<section id="slide-org14bb31e">
+<h2 id="org14bb31e">Heating a material</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=32435&amp;code=cV~ycd6TFJ0tbR2EfeRSTp3RB8xrPH0" frameborder="0" allowfullscreen></iframe>
 
 </section>
 </section>
 <section>
-<section id="slide-org5023849">
-<h2 id="org5023849">Heating a material</h2>
+<section id="slide-org9e2e236">
+<h2 id="org9e2e236">Heating a material</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=32439&amp;code=cT~vNz5yvmayodcJReLFQCUsrvM7REP" frameborder="0" allowfullscreen></iframe>
 
 </section>
 </section>
 <section>
-<section id="slide-orgd9508a9">
-<h2 id="orgd9508a9">Cooling of a material</h2>
+<section id="slide-orge27c31b">
+<h2 id="orge27c31b">Cooling of a material by convection</h2>
+<iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=32441&amp;code=cV~ycd6TGIRtkR3EkeQT0oVRI8srLGW" frameborder="0" allowfullscreen></iframe>
 
 
 
 </section>
 </section>
 <section>
-<section id="slide-org6657440">
-<h2 id="org6657440">Cooling of a material</h2>
-
-</section>
-</section>
-<section>
-<section id="slide-orgfeec3b6">
-<h2 id="orgfeec3b6">Fire piston</h2>
-<div class="outline-text-2" id="text-orgfeec3b6">
-</div>
-</section>
-<section id="slide-orga88e6c1">
-<h3 id="orga88e6c1">Fire piston: Background</h3>
+<section id="slide-org8940b22">
+<h2 id="org8940b22">Fire piston: Background</h2>
 <div>
 <iframe width="1120" height="630" src="https://www.youtube.com/embed/ttz-CzEDXwI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 </section>
-<section id="slide-org618120f">
-<h3 id="org618120f">Fire piston: Energy balance</h3>
-
-</section>
 </section>
 <section>
-<section id="slide-orgd20a136">
-<h2 id="orgd20a136">Refrigeration</h2>
-
+<section id="slide-orgf2e4e60">
+<h2 id="orgf2e4e60">Fire piston: Energy balance</h2>
 
 
 </section>
 </section>
 <section>
-<section id="slide-org9d1484c">
-<h2 id="org9d1484c">Summary</h2>
+<section id="slide-org3c8f331">
+<h2 id="org3c8f331">Refrigeration</h2>
+
+
+
+</section>
+</section>
+<section>
+<section id="slide-org9421cc3">
+<h2 id="org9421cc3">Summary</h2>
 <ul>
 <li>Balance equation</li>
 <li>Heating a material</li>
