--- a/slides/energy_notes.html
+++ b/slides/energy_notes.html
@@ -48,8 +48,8 @@
 
 
 <section>
-<section id="slide-org9f4dcc9">
-<h2 id="org9f4dcc9">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-orgb6d7bec">
+<h2 id="orgb6d7bec">CP213: Applied mathematics and problem solving</h2>
 <h2>Energy balances</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -60,8 +60,8 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-org921d5d5">
-<h2 id="org921d5d5">Overview</h2>
+<section id="slide-orge98f721">
+<h2 id="orge98f721">Overview</h2>
 <ul>
 <li>Heating a material</li>
 <li>Cooling of a material</li>
@@ -74,8 +74,8 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-orgf86b577">
-<h2 id="orgf86b577">Balance equation: Energy</h2>
+<section id="slide-org3fdf6ae">
+<h2 id="org3fdf6ae">Balance equation: Energy</h2>
 <div>
 \begin{align*}
 {\rm accumulation} 
@@ -107,22 +107,22 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-org14bb31e">
-<h2 id="org14bb31e">Heating a material</h2>
+<section id="slide-org88c7ed5">
+<h2 id="org88c7ed5">Heating a material</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=32435&amp;code=cV~ycd6TFJ0tbR2EfeRSTp3RB8xrPH0" frameborder="0" allowfullscreen></iframe>
 
 </section>
 </section>
 <section>
-<section id="slide-org9e2e236">
-<h2 id="org9e2e236">Heating a material</h2>
+<section id="slide-org8f38111">
+<h2 id="org8f38111">Heating a material</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=32439&amp;code=cT~vNz5yvmayodcJReLFQCUsrvM7REP" frameborder="0" allowfullscreen></iframe>
 
 </section>
 </section>
 <section>
-<section id="slide-orge27c31b">
-<h2 id="orge27c31b">Cooling of a material by convection</h2>
+<section id="slide-org4fe567d">
+<h2 id="org4fe567d">Cooling of a material by convection</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=32441&amp;code=cV~ycd6TGIRtkR3EkeQT0oVRI8srLGW" frameborder="0" allowfullscreen></iframe>
 
 
@@ -130,8 +130,8 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-org8940b22">
-<h2 id="org8940b22">Fire piston: Background</h2>
+<section id="slide-org5a35003">
+<h2 id="org5a35003">Fire piston: Background</h2>
 <div>
 <iframe width="1120" height="630" src="https://www.youtube.com/embed/ttz-CzEDXwI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
@@ -139,23 +139,24 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-orgf2e4e60">
-<h2 id="orgf2e4e60">Fire piston: Energy balance</h2>
+<section id="slide-org0982512">
+<h2 id="org0982512">Fire piston: Energy balance</h2>
+<iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=32443&amp;code=d4~HJvzxYtk8CQtibfDSqmfM0lESpPH" frameborder="0" allowfullscreen></iframe>
 
 
 </section>
 </section>
 <section>
-<section id="slide-org3c8f331">
-<h2 id="org3c8f331">Refrigeration</h2>
+<section id="slide-orga4debe1">
+<h2 id="orga4debe1">Refrigeration</h2>
 
 
 
 </section>
 </section>
 <section>
-<section id="slide-org9421cc3">
-<h2 id="org9421cc3">Summary</h2>
+<section id="slide-orgb5a6f62">
+<h2 id="orgb5a6f62">Summary</h2>
 <ul>
 <li>Balance equation</li>
 <li>Heating a material</li>
