--- a/slides/energy_notes.html
+++ b/slides/energy_notes.html
@@ -46,10 +46,36 @@
 <script src="../../reveal.js-plugins/audio-slideshow/recorder.js"></script>
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
-
 <section>
-<section id="slide-org02889bf">
-<h2 id="org02889bf">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-org69e8148">
+<h2 id="org69e8148">Navigation instructions</h2>
+<ul>
+<li>Press <i class="fa fa-bars"></i> at the bottom
+left corner of the page to open a menu.
+<ul>
+<li>Jump to any slide within this presentation to clicking its title.</li>
+<li>Press <i class="fa fa-external-link-alt"></i> to
+navigate to another presentation.</li>
+
+</ul></li>
+<li>Press <a class="hide-on-pdf" onclick="document.location =
+  '?print-pdf';" id="PrintButton"><i class="fa fa-print"></i></a> to
+"print" a *.pdf of the presentation.</li>
+<li>Press <a onclick="showCaptions()" id="PrintButton"><i class="fa fa-closed-captioning"></i></a>
+to open a written transcript of the audio in the slides.</li>
+<li>Press the <code>SPACE</code> key to progress forward in the presentation.</li>
+<li>Use the <code>UP</code> / <code>DOWN</code> / <code>LEFT</code> / <code>RIGHT</code> arrow keys or the arrows in
+the bottom right corner of the page to navigate the presentation.</li>
+
+</ul>
+
+
+
+</section>
+</section>
+<section>
+<section id="slide-orgce60ce2">
+<h2 id="orgce60ce2">CP213: Applied mathematics and problem solving</h2>
 <h2>Energy balances</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -60,8 +86,8 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-orgb9011fa">
-<h2 id="orgb9011fa">Overview</h2>
+<section id="slide-orgef932be">
+<h2 id="orgef932be">Overview</h2>
 <ul>
 <li>Heating a material</li>
 <li>Cooling of a material</li>
@@ -74,8 +100,8 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-org23e4fa1">
-<h2 id="org23e4fa1">Balance equation: Energy</h2>
+<section id="slide-org453ed85">
+<h2 id="org453ed85">Balance equation: Energy</h2>
 <div>
 \begin{align*}
 {\rm accumulation} 
@@ -107,22 +133,22 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-orge9c89cb">
-<h2 id="orge9c89cb">Heating a material</h2>
+<section id="slide-org04bd0ce">
+<h2 id="org04bd0ce">Heating a material</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=32435&amp;code=cV~ycd6TFJ0tbR2EfeRSTp3RB8xrPH0" frameborder="0" allowfullscreen></iframe>
 
 </section>
 </section>
 <section>
-<section id="slide-org33ab819">
-<h2 id="org33ab819">Heating a material</h2>
+<section id="slide-org4439e2e">
+<h2 id="org4439e2e">Heating a material</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=32439&amp;code=cT~vNz5yvmayodcJReLFQCUsrvM7REP" frameborder="0" allowfullscreen></iframe>
 
 </section>
 </section>
 <section>
-<section id="slide-orga264869">
-<h2 id="orga264869">Cooling of a material by convection</h2>
+<section id="slide-orgd8c2bc2">
+<h2 id="orgd8c2bc2">Cooling of a material by convection</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=32441&amp;code=cV~ycd6TGIRtkR3EkeQT0oVRI8srLGW" frameborder="0" allowfullscreen></iframe>
 
 
@@ -130,8 +156,8 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-orgc444ed7">
-<h2 id="orgc444ed7">Fire piston: Background</h2>
+<section id="slide-org33e7960">
+<h2 id="org33e7960">Fire piston: Background</h2>
 <div>
 <iframe width="1120" height="630" src="https://www.youtube.com/embed/ttz-CzEDXwI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
@@ -139,23 +165,23 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-orge55b200">
-<h2 id="orge55b200">Fire piston: Energy balance</h2>
+<section id="slide-org3be637d">
+<h2 id="org3be637d">Fire piston: Energy balance</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=32443&amp;code=d4~HJvzxYtk8CQtibfDSqmfM0lESpPH" frameborder="0" allowfullscreen></iframe>
 
 
 </section>
 </section>
 <section>
-<section id="slide-org9b67d4e">
-<h2 id="org9b67d4e">Refrigeration</h2>
+<section id="slide-org1dee39a">
+<h2 id="org1dee39a">Refrigeration</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=32502&amp;code=dc~RhO3cidKF9Q7NhgpRVjGGpyDrM70" frameborder="0" allowfullscreen></iframe>
 
 </section>
 </section>
 <section>
-<section id="slide-orgbc25bdf">
-<h2 id="orgbc25bdf">Summary</h2>
+<section id="slide-orga362c24">
+<h2 id="orga362c24">Summary</h2>
 <ul>
 <li>Balance equation</li>
 <li>Heating a material</li>
