--- a/slides/momentum_notes.html
+++ b/slides/momentum_notes.html
@@ -48,26 +48,61 @@
 
 
 <section>
-<section id="slide-org750fdeb">
-<h2 id="org750fdeb">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-org15d48a4">
+<h2 id="org15d48a4">Navigation instructions</h2>
+<ul>
+<li>Press <i class="fa fa-bars"></i> at the bottom
+left corner of the page to open a menu.
+<ul>
+<li>Jump to any slide within this presentation to clicking its title.</li>
+<li>Press <i class="fa fa-external-link-alt"></i> to
+navigate to another presentation.</li>
+
+</ul></li>
+<li>Press <a class="hide-on-pdf" onclick="document.location =
+  '?print-pdf';" id="PrintButton"><i class="fa fa-print"></i></a> to
+"print" a *.pdf of the presentation.</li>
+<li>Press <a onclick="showCaptions()" id="PrintButton"><i class="fa fa-closed-captioning"></i></a>
+to open a written transcript of the audio in the slides.</li>
+<li>Press the <code>SPACE</code> key to progress forward in the presentation.</li>
+<li>Use the <code>UP</code> / <code>DOWN</code> / <code>LEFT</code> / <code>RIGHT</code> arrow keys or the arrows in
+the bottom right corner of the page to navigate the presentation.</li>
+
+</ul>
+
+
+
+</section>
+</section>
+<section>
+<section id="slide-orgebd3086" data-audio-src="momentum/title.ogg">
+<h2 id="orgebd3086">CP213: Applied mathematics and problem solving</h2>
 <h2>Momentum/force balances</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
-
-<p class="fragment" data-audio-src="momentum/title.ogg"></p>
-
-<button onclick="showCaptions()" font-size="16px"><i class="fa fa-closed-captioning fa-2x"></i></button>
 
 
 
 <aside class="notes">
-nil
+<p>
+
+</p>
+
+<p>
+In this lecture, we will cover momentum balances, which can also be
+considered force balances.  Mathematically, this is quite similar to
+the mass, species, and energy balances we covered in the previous
+lectures.  The biggest difference is that momentum, the quantity which
+we will be performing the balance over, is a vector, rather than a
+scalar.
+</p>
+
 </aside>
 
 </section>
 </section>
 <section>
-<section id="slide-org1e5fbcc">
-<h2 id="org1e5fbcc">Overview</h2>
+<section id="slide-org5f6773e" data-audio-src="momentum/overview.ogg">
+<h2 id="org5f6773e">Overview</h2>
 <ul>
 <li>basic balance equation</li>
 <li>mass on an inclined plane</li>
@@ -80,13 +115,18 @@ nil
 
 </p>
 
+<p>
+In this lecture, we will cover momentum balances, which can also be
+considered force balances.
+</p>
+
 </aside>
 
 </section>
 </section>
 <section>
-<section id="slide-org0245efa">
-<h2 id="org0245efa">Basic balance equation</h2>
+<section id="slide-org0a69fdf">
+<h2 id="org0a69fdf">Basic balance equation</h2>
 <div>
 \begin{align*}
 {\rm
@@ -96,9 +136,16 @@ accumulation = inflow - outflow + generation
 
 </div>
 
+<aside class="notes">
+<p>
+
+</p>
+
+</aside>
+
 </section>
-<section id="slide-org4cdd0d3">
-<h3 id="org4cdd0d3">Newton's second law of motion</h3>
+<section id="slide-orgc063d2d">
+<h3 id="orgc063d2d">Newton's second law of motion</h3>
 <div>
 \begin{align*}
 F &= m a
@@ -119,51 +166,169 @@ F &= \frac{d}{dt} (mv)
 where \(mv\) is the momentum.
 </p>
 
+<aside class="notes">
+<p>
+
+</p>
+
+</aside>
+
+
 </section>
 </section>
 <section>
-<section id="slide-orgc2dede6">
-<h2 id="orgc2dede6">Mass on an inclined plane</h2>
+<section id="slide-orga763c77">
+<h2 id="orga763c77">Acceleration: Filling a system with momentum</h2>
+<iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=32728&amp;code=cU~6oOHiuxzWq6rgoFqMnWxeukeIsfk" frameborder="0" allowfullscreen></iframe>
+
+<aside class="notes">
+<p>
+In this video, we introduce momentum balances, which are also
+sometimes referred to as force balances.  The basic idea of performing
+momentum balances is exactly the same as in the case of performing
+mass, species, or energy balances.
+</p>
+
+<p>
+One big difference, however, is that momentum is a vector quantity,
+while mass, the number of a particular species, and energy are all
+scalar quantities.  
+</p>
+
+<p>
+Recall that momentum is the product of the mass of a system and its
+velocity, which is a vector.  This means that momentum not only has a
+magnitude, but it also a direction.  We can deal with this by
+considering each component of the momentum separately.  For example,
+the balance for the $x$-, $y$-, and $z$-components of the momentum can
+each be considered separately and independently.  The main subtlety
+that still remains, however, is that increase or decrease of momentum
+depends on what direction is chose as the "positive" direction.  That
+is, an increase in the value of the component of the momentum means a
+higher velocity in the positive direction.
+</p>
+
+
+<p>
+This complication is not too difficult, however, as long as we keep it
+in mind when we are performing our balances.
+</p>
+
+
+<p>
+The next element of momentum balances is linking forces to the
+generation of momentum.  This is given by Newton's second law of
+motion.
+</p>
+
+
+<p>
+With this background, we can now start discussing momentum balances.
+</p>
+
+<p>
+Let's consider "filling" a system with momentum.  This
+</p>
+
+</aside>
+
+
+</section>
+</section>
+<section>
+<section id="slide-org712225b">
+<h2 id="org712225b">Acceleration: Filling a system with momentum</h2>
+<iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=32725&amp;code=dd~rRctNqp9bXJjjVH77fDlsrmXbcyJ" frameborder="0" allowfullscreen></iframe>
+
+<aside class="notes">
+<p>
+In this video, we will be continuing our introduction to momentum
+balances by examining the application of a force on an object of fixed
+mass \(m\).  In this example, however, we assume that the value of the
+applied force is known.  Note that this force may change with time.
+We will then use this to estimate the unknown velocity of the system
+with time.
+</p>
+
+<p>
+In this problem, we only consider the $x$-component of the momentum,
+which is equal to the mass of the system multiplied by the
+$x$-component of its velocity.  Our coordinate system is such that we
+consider motion to the right to be motion in the positive
+$x$-direction.  Positive values of momentum correspond to motion to
+the right, while negative values of the momentum correspond to motion
+to the left.
+</p>
+
+</aside>
+
+
+</section>
+</section>
+<section>
+<section id="slide-org60443a0">
+<h2 id="org60443a0">Mass on an inclined plane</h2>
 <ul>
 <li>gravity: \(m g\)</li>
 <li>friction: \(\mu N\)</li>
 
 </ul>
 
-</section>
-</section>
-<section>
-<section id="slide-orgaed7841">
-<h2 id="orgaed7841">car moving uphill</h2>
-<ul>
-<li>work performed by a force
-<ul>
-<li></li>
+<aside class="notes">
+<p>
+In this video, we will perform a momentum balance for a mass on an
+inclined plane.  In this problem, we have a block of mass \(m\) that is on 
+</p>
 
-</ul></li>
-
-</ul>
+</aside>
 
 </section>
 </section>
 <section>
-<section id="slide-org791e44e">
-<h2 id="org791e44e">Barometric formula</h2>
-<ul>
-<li>pressure: \(p dA\)</li>
+<section id="slide-org8e3e6b4">
+<h2 id="org8e3e6b4">Barometric formula</h2>
+<iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=32813&amp;code=d5~ikLchZEGwxJSG2Gf7MFTy09VBQqb" frameborder="0" allowfullscreen></iframe>
 
-</ul>
+
+<aside class="notes">
+<p>
+In this video, we will derive the barometric formula, which gives the
+pressure or density of a gas as a function of altitude, assuming that
+the temperature remains constant.
+</p>
+
+</aside>
+
+
 
 </section>
 </section>
 <section>
-<section id="slide-org9473eff">
-<h2 id="org9473eff">car</h2>
+<section id="slide-org1ee4ea9">
+<h2 id="org1ee4ea9">Pressure of a liquid on a wall</h2>
+<iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=32810&amp;code=de~TEs6xtAszVCzHLgwdUWVeobnLL9i" frameborder="0" allowfullscreen></iframe>
+
+<aside class="notes">
+<p>
+In analogy to velocity profiles discussed in the lectures on mass
+balances, we have situations where the
+</p>
+
+</aside>
+
+
+
 </section>
 </section>
 <section>
-<section id="slide-orga718f2d">
-<h2 id="orga718f2d">Summary</h2>
+<section id="slide-orgfc5be02">
+<h2 id="orgfc5be02">Motion of a piston</h2>
+
+</section>
+</section>
+<section>
+<section id="slide-org6f359c4">
+<h2 id="org6f359c4">Summary</h2>
 <ul>
 <li>Newton's second law of motion</li>
 <li>types of forces
@@ -175,14 +340,33 @@ where \(mv\) is the momentum.
 <li>friction</li>
 
 </ul></li>
-<li>work and power</li>
+<li>work, power, and force</li>
 
 </ul>
 
 
 
 <aside class="notes">
-nil
+<p>
+
+</p>
+
+<ul>
+<li>momentum: \(m{\bf v}\)</li>
+<li>Newton's second law of motion: forces generate momentum</li>
+<li>types of forces
+<ul>
+<li>contact</li>
+<li>gravity</li>
+<li>friction</li>
+<li>drag</li>
+<li>pressure</li>
+
+</ul></li>
+<li>work</li>
+
+</ul>
+
 </aside>
 </section>
 </section>
