--- a/slides/momentum_notes.html
+++ b/slides/momentum_notes.html
@@ -48,8 +48,8 @@
 
 
 <section>
-<section id="slide-org15d48a4">
-<h2 id="org15d48a4">Navigation instructions</h2>
+<section id="slide-org7e337bd">
+<h2 id="org7e337bd">Navigation instructions</h2>
 <ul>
 <li>Press <i class="fa fa-bars"></i> at the bottom
 left corner of the page to open a menu.
@@ -75,8 +75,8 @@ the bottom right corner of the page to navigate the presentation.</li>
 </section>
 </section>
 <section>
-<section id="slide-orgebd3086" data-audio-src="momentum/title.ogg">
-<h2 id="orgebd3086">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-org74adafa" data-audio-src="momentum/title.ogg">
+<h2 id="org74adafa">CP213: Applied mathematics and problem solving</h2>
 <h2>Momentum/force balances</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -101,8 +101,8 @@ scalar.
 </section>
 </section>
 <section>
-<section id="slide-org5f6773e" data-audio-src="momentum/overview.ogg">
-<h2 id="org5f6773e">Overview</h2>
+<section id="slide-orge874c09" data-audio-src="momentum/overview.ogg">
+<h2 id="orge874c09">Overview</h2>
 <ul>
 <li>basic balance equation</li>
 <li>mass on an inclined plane</li>
@@ -125,8 +125,8 @@ considered force balances.
 </section>
 </section>
 <section>
-<section id="slide-org0a69fdf">
-<h2 id="org0a69fdf">Basic balance equation</h2>
+<section id="slide-orgce00ab0">
+<h2 id="orgce00ab0">Basic balance equation</h2>
 <div>
 \begin{align*}
 {\rm
@@ -144,8 +144,8 @@ accumulation = inflow - outflow + generation
 </aside>
 
 </section>
-<section id="slide-orgc063d2d">
-<h3 id="orgc063d2d">Newton's second law of motion</h3>
+<section id="slide-org1b23a5c">
+<h3 id="org1b23a5c">Newton's second law of motion</h3>
 <div>
 \begin{align*}
 F &= m a
@@ -177,8 +177,8 @@ where \(mv\) is the momentum.
 </section>
 </section>
 <section>
-<section id="slide-orga763c77">
-<h2 id="orga763c77">Acceleration: Filling a system with momentum</h2>
+<section id="slide-orgeae1f26">
+<h2 id="orgeae1f26">Acceleration: Filling a system with momentum</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=32728&amp;code=cU~6oOHiuxzWq6rgoFqMnWxeukeIsfk" frameborder="0" allowfullscreen></iframe>
 
 <aside class="notes">
@@ -236,8 +236,8 @@ Let's consider "filling" a system with momentum.  This
 </section>
 </section>
 <section>
-<section id="slide-org712225b">
-<h2 id="org712225b">Acceleration: Filling a system with momentum</h2>
+<section id="slide-org68d4aab">
+<h2 id="org68d4aab">Acceleration: Filling a system with momentum</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=32725&amp;code=dd~rRctNqp9bXJjjVH77fDlsrmXbcyJ" frameborder="0" allowfullscreen></iframe>
 
 <aside class="notes">
@@ -266,13 +266,10 @@ to the left.
 </section>
 </section>
 <section>
-<section id="slide-org60443a0">
-<h2 id="org60443a0">Mass on an inclined plane</h2>
-<ul>
-<li>gravity: \(m g\)</li>
-<li>friction: \(\mu N\)</li>
+<section id="slide-orgab1122e">
+<h2 id="orgab1122e">Mass on an inclined plane</h2>
+<iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=32824&amp;code=d4~HJvAy0tn8CQAi5fzStmoLWlwSnPG" frameborder="0" allowfullscreen></iframe>
 
-</ul>
 
 <aside class="notes">
 <p>
@@ -280,13 +277,19 @@ In this video, we will perform a momentum balance for a mass on an
 inclined plane.  In this problem, we have a block of mass \(m\) that is on 
 </p>
 
+<ul>
+<li>gravity: \(m g\)</li>
+<li>friction: \(\mu N\)</li>
+
+</ul>
+
 </aside>
 
 </section>
 </section>
 <section>
-<section id="slide-org8e3e6b4">
-<h2 id="org8e3e6b4">Barometric formula</h2>
+<section id="slide-orgaf96760">
+<h2 id="orgaf96760">Barometric formula</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=32813&amp;code=d5~ikLchZEGwxJSG2Gf7MFTy09VBQqb" frameborder="0" allowfullscreen></iframe>
 
 
@@ -304,8 +307,8 @@ the temperature remains constant.
 </section>
 </section>
 <section>
-<section id="slide-org1ee4ea9">
-<h2 id="org1ee4ea9">Pressure of a liquid on a wall</h2>
+<section id="slide-org6e0b32d">
+<h2 id="org6e0b32d">Pressure of a liquid on a wall</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=32810&amp;code=de~TEs6xtAszVCzHLgwdUWVeobnLL9i" frameborder="0" allowfullscreen></iframe>
 
 <aside class="notes">
@@ -321,14 +324,14 @@ balances, we have situations where the
 </section>
 </section>
 <section>
-<section id="slide-orgfc5be02">
-<h2 id="orgfc5be02">Motion of a piston</h2>
+<section id="slide-org550a916">
+<h2 id="org550a916">Motion of a piston</h2>
 
 </section>
 </section>
 <section>
-<section id="slide-org6f359c4">
-<h2 id="org6f359c4">Summary</h2>
+<section id="slide-org3297dcc">
+<h2 id="org3297dcc">Summary</h2>
 <ul>
 <li>Newton's second law of motion</li>
 <li>types of forces
