--- a/slides/momentum_notes.html
+++ b/slides/momentum_notes.html
@@ -48,8 +48,8 @@
 
 
 <section>
-<section id="slide-org7e337bd">
-<h2 id="org7e337bd">Navigation instructions</h2>
+<section id="slide-org967b75d">
+<h2 id="org967b75d">Navigation instructions</h2>
 <ul>
 <li>Press <i class="fa fa-bars"></i> at the bottom
 left corner of the page to open a menu.
@@ -75,8 +75,8 @@ the bottom right corner of the page to navigate the presentation.</li>
 </section>
 </section>
 <section>
-<section id="slide-org74adafa" data-audio-src="momentum/title.ogg">
-<h2 id="org74adafa">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-orgbfff61d" data-audio-src="momentum/title.ogg">
+<h2 id="orgbfff61d">CP213: Applied mathematics and problem solving</h2>
 <h2>Momentum/force balances</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -101,8 +101,8 @@ scalar.
 </section>
 </section>
 <section>
-<section id="slide-orge874c09" data-audio-src="momentum/overview.ogg">
-<h2 id="orge874c09">Overview</h2>
+<section id="slide-orga43fe8f" data-audio-src="momentum/overview.ogg">
+<h2 id="orga43fe8f">Overview</h2>
 <ul>
 <li>basic balance equation</li>
 <li>mass on an inclined plane</li>
@@ -125,8 +125,8 @@ considered force balances.
 </section>
 </section>
 <section>
-<section id="slide-orgce00ab0">
-<h2 id="orgce00ab0">Basic balance equation</h2>
+<section id="slide-orgbd223bb">
+<h2 id="orgbd223bb">Basic balance equation</h2>
 <div>
 \begin{align*}
 {\rm
@@ -144,8 +144,8 @@ accumulation = inflow - outflow + generation
 </aside>
 
 </section>
-<section id="slide-org1b23a5c">
-<h3 id="org1b23a5c">Newton's second law of motion</h3>
+<section id="slide-org4b0791f">
+<h3 id="org4b0791f">Newton's second law of motion</h3>
 <div>
 \begin{align*}
 F &= m a
@@ -177,8 +177,8 @@ where \(mv\) is the momentum.
 </section>
 </section>
 <section>
-<section id="slide-orgeae1f26">
-<h2 id="orgeae1f26">Acceleration: Filling a system with momentum</h2>
+<section id="slide-orgc0fce01">
+<h2 id="orgc0fce01">Acceleration: Filling a system with momentum</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=32728&amp;code=cU~6oOHiuxzWq6rgoFqMnWxeukeIsfk" frameborder="0" allowfullscreen></iframe>
 
 <aside class="notes">
@@ -236,8 +236,8 @@ Let's consider "filling" a system with momentum.  This
 </section>
 </section>
 <section>
-<section id="slide-org68d4aab">
-<h2 id="org68d4aab">Acceleration: Filling a system with momentum</h2>
+<section id="slide-org569a4cf">
+<h2 id="org569a4cf">Acceleration: Filling a system with momentum</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=32725&amp;code=dd~rRctNqp9bXJjjVH77fDlsrmXbcyJ" frameborder="0" allowfullscreen></iframe>
 
 <aside class="notes">
@@ -266,8 +266,8 @@ to the left.
 </section>
 </section>
 <section>
-<section id="slide-orgab1122e">
-<h2 id="orgab1122e">Mass on an inclined plane</h2>
+<section id="slide-org98137dc">
+<h2 id="org98137dc">Mass on an inclined plane</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=32824&amp;code=d4~HJvAy0tn8CQAi5fzStmoLWlwSnPG" frameborder="0" allowfullscreen></iframe>
 
 
@@ -288,8 +288,8 @@ inclined plane.  In this problem, we have a block of mass \(m\) that is on
 </section>
 </section>
 <section>
-<section id="slide-orgaf96760">
-<h2 id="orgaf96760">Barometric formula</h2>
+<section id="slide-org5edad4b">
+<h2 id="org5edad4b">Barometric formula</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=32813&amp;code=d5~ikLchZEGwxJSG2Gf7MFTy09VBQqb" frameborder="0" allowfullscreen></iframe>
 
 
@@ -307,8 +307,8 @@ the temperature remains constant.
 </section>
 </section>
 <section>
-<section id="slide-org6e0b32d">
-<h2 id="org6e0b32d">Pressure of a liquid on a wall</h2>
+<section id="slide-orge74071a">
+<h2 id="orge74071a">Pressure of a liquid on a wall</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=32810&amp;code=de~TEs6xtAszVCzHLgwdUWVeobnLL9i" frameborder="0" allowfullscreen></iframe>
 
 <aside class="notes">
@@ -324,14 +324,14 @@ balances, we have situations where the
 </section>
 </section>
 <section>
-<section id="slide-org550a916">
-<h2 id="org550a916">Motion of a piston</h2>
+<section id="slide-orgb9b5e97">
+<h2 id="orgb9b5e97">Motion of a piston</h2>
 
 </section>
 </section>
 <section>
-<section id="slide-org3297dcc">
-<h2 id="org3297dcc">Summary</h2>
+<section id="slide-org4fa488b">
+<h2 id="org4fa488b">Summary</h2>
 <ul>
 <li>Newton's second law of motion</li>
 <li>types of forces
