--- a/slides/links.html
+++ b/slides/links.html
@@ -25,7 +25,7 @@
 
   <li class="slide-menu-item menu-section">Weeks 5-8: Ordinary differential equations</li>
   <li class="slide-menu-item">
-    <!---a href="https://mjksill.github.io/CP213-online/slides/ode_notes.html">Ordinary differential equations</a--->
+    <a href="https://mjksill.github.io/CP213-online/slides/ode_notes.html">Ordinary differential equations</a>
   </li>
   
   <li class="slide-menu-item menu-section">Weeks 9-10: Multivariate calculus</li>
